[BBB-174] Admin client search UI. Updates include:* Tidied up bbAdminBookingClients removing redundant method/vars* Updated bbAdminBookingClients.getClients to make two requests, search by name and mobile* Refactored sorting in bbAdminBookingClients so that options are added via the controller* Tidied up CSSand updated template to use BB components * Updated bbForm to handle validation of the form itself* Added height fix for large buttons when using font awesome icons in buttons* Removed css manipulation of form-group padding for inline forms - this screws up button alignment* Introduced bb-list css components which allows you to easily create lists with diff options, bordered, animated, banded etc.* Added bb-block css component to be used wrap items such lists
[BBB-174] Admin client search UI. Updates include:
* Tidied up bbAdminBookingClients removing redundant method/vars
* Updated bbAdminBookingClients.getClients to make two requests, search by name and mobile
* Refactored sorting in bbAdminBookingClients so that options are added via the controller
* Tidied up CSSand updated template to use BB components 
* Updated bbForm to handle validation of the form itself
* Added height fix for large buttons when using font awesome icons in buttons
* Removed css manipulation of form-group padding for inline forms - this screws up button alignment
* Introduced bb-list css components which allows you to easily create lists with diff options, bordered, animated, banded etc.
* Added bb-block css component to be used wrap items such lists

--- a/src/admin-booking/stylesheets/_client_admin.scss
+++ b/src/admin-booking/stylesheets/_client_admin.scss
@@ -1,6 +1,6 @@
-.bb-admin-client, [bb-admin-booking-clients] {
+[bb-admin-booking-clients] {
 
-  .admin-typehead-wrapper {
+  .bb-admin-typehead-wrapper {
     margin-bottom: 20px;
     .dropdown-menu{
       max-height: 500px;
@@ -17,63 +17,54 @@
     }
   }
 
-  .typehead-client-wrapper{
-    border: 1px solid $secondary-border-color;
-    border-bottom: 0;
-    border-left: 0;
-    border-right: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  .panel-client-close{
-    padding-top: 2px;
-    float: right;
-    &:hover{
-      transition: 0.5s;
-      transform: scale(1.25);
-    }
-  }
-
-  .admin-form-submit{
-    margin-top: 20px;
-  }
-
-  .search-results{
-    margin-top: 40px;
-  }
-
-  .typehead-results-wrapper{
-    font-size: 18px;
-    padding: 0;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  .bb-typehead-results-wrapper {
+    padding: 10px 15px 5px;
     border: 1px solid $secondary-border-color;
     border-top: 0px;
+    min-width: 300px;
+    cursor: pointer;
   }
 
-  .admin-typehead{
+  .admin-typehead {
     .dropdown-menu{
       max-height: 500px;
       overflow: auto;
     }
   }
 
-  .dropdown-menu{
+  .dropdown-menu {
+    padding: 0;
     .active{
       background-color: $hyperlink-color;
       color: white;
     }
   }
 
-  .icon-padding {
-    padding-left: 10px;
+  .search-results{
+    margin-top: 30px;
   }
 
-  .typh-header{
-    font-size: 22px;
+  .fa-mobile.fa-lg.fa-fw {
+    width: 17px;
+  }
+
+  .bb-typh-header{
+    font-size: 20px;
+  }
+
+  .btn-select-client {
+    margin-top: 14px;
+  }
+
+  .bb-search-options {
+    text-align: right;
+  }
+
+  .bb-search-summary {
+    line-height: 34px;
+    font-size: 18px;
+    font-weight: bold;
+    display: inline-block;
   }
 
 }
